app-prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: app-prod
  name: app-prod
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app-prod
  template:
    metadata:
      labels:
        app: app-prod
    spec:
      containers:
      - image: nginx:latest
        name: nginx
        ports:
        - containerPort: 80
        volumeMounts:
          - name: config-nginx
            mountPath: /etc/nginx/conf.d
      volumes:
        - name: config-nginx
          configMap:
            name: nginx-configmap

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app-prod
  name: app-prod
spec:
  type: ClusterIP
  selector:
    app: app-prod
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
