ingress-canary-weight.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-canary-weight
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "10"
spec:
  rules:
  - host: canary.homework.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-demo
            port:
              number: 80
