ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-web
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: canary.homework.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-prod
            port:
              number: 80
